# telef

./: .clang-format  .gitignore  .gitmodules  1.face_detector_server_demo.sh  2.run_tracker.sh  3.clean_demo.sh  CMakeLists.txt  README.md  format-source.sh
app/: ConvertPlyUV.cpp  DummyLandmarkProject.cpp  FaceFeatureDetect.cpp  FakeDeviceTest.cpp  KinectTest.cpp  KinectToPLY.cpp  KinnectToPLY.cpp  LandmarkProject.cpp  MakePcaModel.cpp  PcaCudaSampleTest.cpp  PcaDemo.cpp  PcaFit.cpp  PcaSample.cpp  PcaTargetFit.cpp  PcaTest.cpp  PngTest.cpp  RecordDeviceCloud.cpp  RigidAlighnment.cpp  RigidAlignmentTest.cpp
app/byproducts/: DNNFaceDetector.cpp  FaceTrackerClient.cpp  OrganizedPointKSearch.cpp  PcaTest.cpp  RigidAlignment.cpp  Visualizer.cpp  kinectSurfaceNormals.cpp
app/examples/: 3DLandmarkProject.cpp  FakeDeviceExample.cpp  LandmarkProject.cpp  RigidAlignmentExample.cpp
app/tools/: IntrinsicDecomposition.cpp  KinectConnectTest.cpp  MakeFwPcaModel.cpp  MakePcaModel.cpp  PRNetPcaTargetFit.cpp  PcaMultiModalFit.cpp  PcaSample.cpp  PcaTargetFit.cpp  RecordFakeFrame.cpp
data/test-rigid/: flame_lmk_b_coords.csv  flame_lmk_face_idx.csv
docker/: .gitignore  Dockerfile  HOW_TO_USE_DOCKER.md  build_all.sh  build_image.sh  install_dependencies.sh  run_bash.sh  run_bash_kinect1.sh  run_bash_kinect2.sh  run_clion.sh  telef_run.sh  use_display.sh
docker/OpenNI2-FreenectDriver/: libFreenectDriver.so.0.6.0
docker/ceres-solver/: PKGBUILD
docker/flann/: PKGBUILD  cmake_3.11.patch
docker/ncurses5-compat-libs/: PKGBUILD
docker/pcl-git/: PKGBUILD
include/: RGBDFrame.h  camera.h  exceptions.h  type.h
include/align/: bsfit_pipe.h  cost_func.h  cu_cost_func.h  cu_loss.h  lmkfit_pipe.h  nonrigid_pipe.h  rigid.h  rigid_pipe.h  toresult_pipe.h
include/cloud/: cloud_merger.h  cloud_pipe.h
include/cluster/: cluster.h
include/face/: classified_model.h  classify_pipe.h  cu_model.h  cu_model_kernel.h  deformation_model.h  feeder.h  model.h  model_cudahelper.h  personalized_blendshape.h  prnet.h  raw_model.h
include/feature/: face.h  face_detect_pipe.h  feature_detect_frontend.h  feature_detect_pipe.h  feature_detector.h
include/image/: image_pipe.h
include/intrinsic/: intrinsic.h  intrinsic_pipe.h
include/io/: OpenNI2Reader.h  bmp.h  channel.h  device.h  devicecloud.h  fakeframe.h  fetcher.h  frontend.h  grabber.h  landmark.h  matrix.h  merger.h  normaldepth_pipe.h  obj.h  opencv_metadata_wrapper.h  pipe.h  png.h  wrapper.h
include/io/align/: PCAVisualizerPrepPipe.h  align_frontend.h
include/io/dataset/: face_warehouse.h
include/io/merger/: device_input.h  device_input_merger.h
include/io/ply/: YaPly.h  meshio.h  ply.h
include/io/socket/: asio.h
include/mesh/: bilinear_model.h  color_projection_pipe.h  colormapping.h  deform.h  defw.h  mesh.h
include/util/: UvPointMapping.h  booststd.h  colormesh.h  convert_arr.h  cu_array.h  cu_quaternion.h  cu_reduce.h  cudautil.h  eigen_file_io.h  eigen_pcl.h  fake_frame_record_device.h  linear_sum.h  linear_sum_gpu.h  normal.h  pcl_cv.h  po_util.h  require.h  shader.h  transform.h  uv_point_mapping.h
include/vis/: fitting_visualizer.h
lib/: alglib-3.15.0.cpp.gpl.tgz
messages/: CMakeLists.txt  messages.proto
pcamodels/: bs-4.exp.base  bs-4.shape.base  bs-5.exp.base  bs-5.lmk  bs-5.ref.ply  cvmodel.deform.base  cvmodel.deform.mean  cvmodel_rank30.deform.base  example.deform.mean  example.lmk  example_nonscaled.lmk  example_nonscaled.ref.ply  expression.exp.base  expression.exp.mean  expression.shape.base  expression.shape.mean  xm2vts.lmk
scripts/: telef_run.sh
src/: RGBDFrame.cpp
src/align/: bsfit_pipe.cpp  cost_func.cu  cu_cost_func.cu  cu_loss.cu  lmk_scan_rigid_pipe.cpp  lmkfit_pipe.cpp  nonrigid_pipe.cpp  rigid_pipe.cpp  svd_rigid_alignment.cpp
src/cloud/: cloud_pipe.cpp
src/face/: cu_model.cu  cu_model_kernel.cu  deformation_model.cpp  feeder.cpp  model.cpp  model_cudahelper.cpp  personalized_blendshape.cpp  prnet.cpp
src/feature/: face_detect_pipe.cpp  feature_detect_pipe.cpp  feature_detector.cpp  intraface_detector.cpp
src/intrinsic/: intrinsic.cpp  intrinsic_pipe.cpp
src/io/: OpenNI2Reader.cpp  bmp.cpp  channel.cpp  device.cpp  devicecloud.cpp  fakeframe.cpp  fetcher.cpp  frontend.cpp  grabber.cpp  landmark.cpp  normaldepth_pipe.cpp  obj.cpp  pipe.cpp  png.cpp  wrapper.cpp
src/io/align/: PCAVisualizerPrepPipe.cpp  align_frontend.cpp  rigid_frontend.cpp
src/io/dataset/: face_warehouse.cpp
src/io/ply/: meshio.cpp  plyfile.c
src/mesh/: color_projection_pipe.cpp  colormapping.cpp  deform.cpp  mesh.cpp
src/util/: UvPointMapping.cpp  cu_quaternion.cu  fake_frame_record_device.cpp  linear_sum.cpp  linear_sum_gpu.cu  po_util.cpp  transform.cpp
src/vis/: fitting_visualizer.cpp
tests/align/: test_cu_loss.cu
tests/face/: test_prnet.cpp
tests/testutil/: diff.h
tests/util/: test_cu_loss.cu  test_cu_quaternion.cu  test_nonrigid_pca.cu
